# converterBackend

./: .env  .example.env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  testdb.db
.github/workflows/: convert-ci.yml
src/: __init__.py  converter_application.py
src/api/auth/: __init__.py  auth_service.py  hash_service.py
src/api/core/exceptions/: __init__.py  auth_excp.py  file_excp.py  user_excp.py
src/api/core/routers/: __init__.py  auth_router.py  files_router.py  history_router.py  user_router.py  user_type_router.py
src/api/core/schemas/: __init__.py  auth_schemas.py  history_schemas.py  user_schemas.py  user_type_schemas.py
src/api/core/services/: __init__.py  auth_service.py  file_service.py  history_service.py  user_service.py
src/api/dep/: __init__.py  iouw.py  uow.py
src/api/enums_sett/: __init__.py  enum_auth.py  enum_db.py  routers_e.py
src/db/: __init__.py  database.py
src/db/models/: general_model.py  history_model.py  user_model.py  user_type_model.py
src/db/repository/: general_repository.py  history_repository.py  user_repository.py  user_type_repository.py
src/other_services/: __init__.py  cleaner_files.py  compression_service.py  convert_service.py  file_service.py
src/settings/: __init__.py  api_settings.py  db_settings.py  descriptor_settings.py
src/static/files/: DocxFile.docx  compress_Еще один важный файл.zlib
test/: conftest.py  test_connection.py  test_create_tables.py
