[tool.poetry]
name = "backendconverter"
version = "0.1.0"
description = "College project for discipline 'Web programming'"
authors = ["darkfos82 <darkfos82@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
python-multipart = "^0.0.17"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
